fix game overflow y and restyle the header bottom border

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,8 @@
 body {
     font-family: sans-serif;
     padding: 0;
+    max-width: 100vw;
+    overflow-y: hidden;
 }
 
 h1 {
@@ -194,6 +196,8 @@ font-size: 2rem;
     align-items: center;
     height: 100vh;
     width: 100vw;
+    max-width: 100vw;
+    overflow-y: hidden;
     min-height: 100vh;
     background-color: var(--clr-grey-1);
     gap: 2rem;
@@ -201,7 +205,7 @@ font-size: 2rem;
 
 .game header{
     padding: 1rem;
-    width: 60%;
+    width: max-content;
     text-align: center;
     border-bottom:0.5rem solid rgba(0, 191, 255, 0.7);
 }
